2011-06-10  Murray Cumming  <murrayc@murrayc.com>

	Split H/V* classes into separate files.

	* gtk/src/filelist.am:
	* gtk/src/box.hg:
	* gtk/src/buttonbox.[hg|ccg]:
	* gtk/src/hvbox.[hg|ccg]:
	* gtk/src/hvbuttonbox.[hg|ccg]:
	* gtk/src/hvpaned.[hg|ccg]:
	* gtk/src/hvscale.[hg|ccg]:
	* gtk/src/hvseparator.[hg|ccg]:
	* gtk/src/paned.hg:
	* gtk/src/scale.[hg|ccg]:
	* gtk/src/separator.hg: Move the deprecated classes into 
	separate files because gmmproc deprecates the whole file when 
	using _IS_DEPRECATED, which causes the non-deprecated classes to 
	be ifdefed too.

2011-06-10  Murray Cumming  <murrayc@murrayc.com>

	Avoid use of deprecated H/V* classes.

	* demos/gtk-demo/demowindow.[h|cc]:
	* demos/gtk-demo/example_buttonbox.cc:
	* demos/gtk-demo/example_change_display.cc:
	* demos/gtk-demo/example_colorsel.cc:
	* demos/gtk-demo/example_dialog.cc:
	* demos/gtk-demo/example_drawingarea.cc:
	* demos/gtk-demo/example_iconview.cc:
	* demos/gtk-demo/example_images.cc:
	* demos/gtk-demo/example_menus.cc:
	* demos/gtk-demo/example_panes.cc:
	* demos/gtk-demo/example_sizegroup.cc:
	* demos/gtk-demo/example_stockbrowser.cc:
	* demos/gtk-demo/example_textview.cc:
	* demos/gtk-demo/example_treeview_editable_cells.cc:
	* demos/gtk-demo/example_treeview_liststore.cc:
	* demos/gtk-demo/example_treeview_treestore.cc:
	* demos/gtk-demo/example_uimanager.cc:
	* gtk/src/bin.ccg:
	* tests/delete_cpp_child/main.cc:
	* tests/dialog/main.cc: Change all uses of HBox, VBox, and 
	the equivalents for ButtonBox, Scale, Separator, etc to 
	the non-deprecated Box, etc, equivalents.

2011-06-09  Murray Cumming  <murrayc@murrayc.com>

	Deprecate all H* an V* classes in favour of the base classes.

	* gtk/src/box.hg:
	* gtk/src/buttonbox.hg:
	* gtk/src/paned.hg:
	* gtk/src/scale.hg:
	* gtk/src/scrollbar.hg:
	* gtk/src/separator.hg: Deprecate all H* and V* classes.
	We should now just use the base classes, setting the orientation 
	appropriately. This is indeed rather tedious.
