@@ -114,5 +114,10 @@ public:
   _WRAP_PROPERTY("homogeneous", bool)
 };
 
-
 } // namespace Gtk
+
+//Include the deprecated header, 
+//whose classes were previously in this header,
+//to preserve the "API" of the includes.
+#include <gtkmm/hvbox.h>
+
