@@ -60,5 +60,9 @@ public:
   _WRAP_PROPERTY("layout-style", ButtonBoxStyle)
 };
 
-
 } // namespace Gtk
+
+//Include the deprecated header, 
+//whose classes were previously in this header,
+//to preserve the "API" of the includes.
+#include <gtkmm/hvbuttonbox.h>
