@@ -18,7 +18,7 @@
  */
 
 _DEFS(gtkmm,gtk)
-_PINCLUDE(gtkmm/private/box_p.h)
+_PINCLUDE(gtkmm/private/hvbox_p.h)
 _PINCLUDE(gtkmm/private/dialog_p.h)
 
 #include <vector>
