@@ -22,7 +22,7 @@
 #include <gtkmm/box.h>
 #include <gtkmm/filechooserdialog.h>
 _DEFS(gtkmm,gtk)
-_PINCLUDE(gtkmm/private/box_p.h)
+_PINCLUDE(gtkmm/private/hvbox_p.h)
 
 
 namespace Gtk
