@@ -23,7 +23,7 @@
 #include <gtkmm/filechooser.h>
 
 _DEFS(gtkmm,gtk)
-_PINCLUDE(gtkmm/private/box_p.h)
+_PINCLUDE(gtkmm/private/hvbox_p.h)
 
 
 namespace Gtk
