@@ -197,7 +197,11 @@ gtkmm_files_posix_hg =		\
 	printunixdialog.hg	\
 	socket.hg
 
-gtkmm_files_deprecated_hg =
+gtkmm_files_deprecated_hg = hvbox.hg \
+	hvbuttonbox.hg \
+	hvpaned.hg \
+	hvscale.hg \
+	hvseparator.hg
 
 if HOST_WINDOWS_NATIVE
 gtkmm_files_arch_hg =
