@@ -22,13 +22,11 @@
 #include <gtkmm/enums.h>
 
 _DEFS(gtkmm,gtk)
-_PINCLUDE(gtkmm/private/box_p.h)
+_PINCLUDE(gtkmm/private/hvbox_p.h)
 
 
 namespace Gtk
 {
-
-//TODO: Derive from Gtk::Buildable when we can break ABI.
 
 /** This widget that can be used to show messages to the user without showing a dialog.
  * It is often temporarily shown at the top or bottom of a document. In contrast to
