@@ -106,3 +106,8 @@ public:
 };
 
 } // namespace Gtk
+
+//Include the deprecated header, 
+//whose classes were previously in this header,
+//to preserve the "API" of the includes.
+#include <gtkmm/hvpaned.h>
