@@ -19,7 +19,7 @@
 #include <gtkmm/recentchooser.h>
 
 _DEFS(gtkmm,gtk)
-_PINCLUDE(gtkmm/private/box_p.h)
+_PINCLUDE(gtkmm/private/hvbox_p.h)
 
 namespace Gtk
 {
