@@ -128,3 +128,10 @@ protected:
 };
 
 } /* namespace Gtk */
+
+
+//Include the deprecated header, 
+//whose classes were previously in this header,
+//to preserve the "API" of the includes.
+#include <gtkmm/hvscale.h>
+
