@@ -46,3 +46,9 @@ public:
 
 } /* namespace Gtk */
 
+//Include the deprecated header, 
+//whose classes were previously in this header,
+//to preserve the "API" of the includes.
+#include <gtkmm/hvseparator.h>
+
+
