@@ -1,5 +1,16 @@
 2011-06-10  Murray Cumming  <murrayc@murrayc.com>
 
+	box.h, etc: Include the deprecated H/V classes.
+
+	* gtk/src/box.hg:
+	* gtk/src/buttonbox.hg:
+	* gtk/src/separator.hg:
+	* gtk/src/paned.hg:
+	* gtk/src/scale.hg: Include the deprecated headers at the end,
+	so that developers do not need to change their include lines.
+
+2011-06-10  Murray Cumming  <murrayc@murrayc.com>
+
 	Split H/V* classes into separate files.
 
 	* gtk/src/filelist.am:
